DJV-27: windows installer